# none

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  bochsrc
boot/: CMakeLists.txt  grub.cfg
include/: stddef.h  stdlib.h
include/none/: list.h
kernel/: CMakeLists.txt  _setup.S  asm-offsets.def  kernel.lds.in  kernel.mk  log.h  mem.c  task.c  trap.c  version.h  version.h.in  x86.S
kernel/rootfs/: rootfs.c  rw.c
lib/c/: CMakeLists.txt
lib/fs/: CMakeLists.txt
lib/glib/: Makefile
lib/libpng/contrib/gregbook/: readpng.c
lib/posix/: CMakeLists.txt
libs/c/stdio/: vsnprintf.c
libs/glib/include/: graphics.h
libs/glib/src/: m800x600x888.c
modules/timer/: Makefile  timer.c
tools/: .ninja_deps  .ninja_log  CMakeLists.txt  Makefile.rule  asm-offsets.sh  bochsrc  mkimg.sh  mkiso.sh
